<resources>
    <string name="app_name">Meal Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_message">Get excited! Start preparing your meals for the days ahead.</string>
    <string name="email">Email</string>
    <string name="or_log_in_with">or log in with</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="lazy_meals_for_a_cozy_day">Lazy meals for a cozy day:</string>
    <string name="today_s_suggested_meal">Suggested meal:</string>
    <string name="instructions">Instructions:</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="default_web_client_id">305195842916-qkbg23vg8p6j9g02kpq9i5gt2rkg17pv.apps.googleusercontent.com</string>
    <string name="planned_meals">Planned Meals</string>
    <string name="log_out">Log Out</string>
    <string name="favourite_meals">Favourite Meals</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="welcome">Welcome</string>
    <string name="home_screen">Home Screen</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="ingredients">Ingredients:</string>

</resources>